# test-cpp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENCE.rst  Makefile  Makefile.dep  README.rst  TestCpp.vcproj  test-cpp.vcproj
include/testcpp/: StdOutView.h  assert_impl.h  testcpp.h
include/testcpp/detail/: TextStreamTestView.h
include/testcpp/detail/general/: declarations.h  release_assert.h  scoped_pointer.h
scripts/: build.sh  prepare-build.sh
src/: testcpp.cpp
test/: TestCppTests.sln  TestCppTests.vcproj
test/src/: main.cpp
